new starship form

--- a/django_tuto_root/django_tuto_site/templates/base.html
+++ b/django_tuto_root/django_tuto_site/templates/base.html
@@ -5,6 +5,12 @@
     <title>{{ title }}</title>
 </head>
 <body>
+    <nav id="nav">
+        <ul>
+            <li><a href="/">Starship list</a></li>
+            <li><a href="/add-starship">New starship</a></li>
+        </ul>
+    </nav>
     <h1>{{ title }}</h1>
     {% block content %}
     {% endblock content %}
