--- a/django_tuto_root/django_tuto_site/templates/base.html
+++ b/django_tuto_root/django_tuto_site/templates/base.html
@@ -3,16 +3,32 @@
 <head>
     <meta charset="utf-8">
     <title>{{ title }}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+        th, td {
+            padding-left: .5rem;
+            padding-right: .5rem;
+        }
+
+        /*th {
+            border-bottom: 1px gray solid;
+        }*/
+
+    </style>
 </head>
 <body>
-    <nav id="nav">
-        <ul>
-            <li><a href="/">Starship list</a></li>
-            <li><a href="/add-starship">New starship</a></li>
+<nav id="nav" class="navbar navbar-expand bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Spaceships</a>
+        <ul class="navbar-nav me-auto">
+            <li class="nav-item"><a class="nav-link" href="/">List</a></li>
+            <li class="nav-item"><a class="nav-link" href="/add-starship">New</a></li>
         </ul>
-    </nav>
-    <h1>{{ title }}</h1>
-    {% block content %}
-    {% endblock content %}
+    </div>
+</nav>
+<h1>{{ title }}</h1>
+{% block content %}
+{% endblock content %}
 </body>
 </html>
