--- a/django_tuto_root/django_tuto_site/templates/base.html
+++ b/django_tuto_root/django_tuto_site/templates/base.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>{{ title }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    {% load bootstrap5 %}
+
+    {% bootstrap_css %}
+
+    {% bootstrap_javascript %}
+
+    {% bootstrap_messages %}
+
     <style>
         th {
             border-bottom: 1px black solid;
@@ -12,16 +19,19 @@
     </style>
 </head>
 <body>
-<nav id="nav" class="navbar navbar-expand bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Spaceships</a>
+        <a class="navbar-brand" href="#">Starships</a>
         <ul class="navbar-nav me-auto">
-            <li class="nav-item"><a class="nav-link" href="/">List</a></li>
-            <li class="nav-item"><a class="nav-link" href="/add-starship">New</a></li>
+            <li class="nav-item"><a class="nav-link {% if nav_active == 'list' %} active {% endif %}" href="/">List</a>
+            </li>
+            <li class="nav-item"><a class="nav-link {% if nav_active == 'new' %} active {% endif %}"
+                                    href="/add-starship">New</a></li>
         </ul>
     </div>
 </nav>
-<h1>{{ title }}</h1>
+
 {% block content %}
 {% endblock content %}
 </body>
