--- a/django_tuto_root/starships/templates/starships/add_starship.html
+++ b/django_tuto_root/starships/templates/starships/add_starship.html
@@ -1,23 +1,32 @@
 {% extends "base.html" %}
+{% load bootstrap5 %}
 
 {% block content %}
 
-<h2>New starship</h2>
+<div class="container">
 
+    <h2>New starship</h2>
 
-{% if submitted %}
+    {% if submitted %}
     <p class="success">Starship created.</p>
-{% else %}
-    <form action="" method="post" novalidate>
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td>&nbsp;</td>
-                <td><input type="submit" value="submit"></td>
-            </tr>
-        </table>
-        {% csrf_token %}
-    </form>
-{% endif %}
+    {% else %}
+
+    <div class="row">
+        <div class="col-md-12">
+            <form action="" method="post" class="form" novalidate>
+                {% csrf_token %}
+                {% bootstrap_form form %}
+                {% buttons %}
+                <button type="submit" class="btn btn-primary">Submit</button>
+                {% endbuttons %}
+            </form>
+        </div>
+    </div>
+
+
+    {% endif %}
+
+</div>
+
 
 {% endblock content %}
