css : add spacing

--- a/django_tuto_root/django_tuto_site/templates/base.html
+++ b/django_tuto_root/django_tuto_site/templates/base.html
@@ -13,9 +13,16 @@
     {% bootstrap_messages %}
 
     <style>
+
+        .container:not(:first-child),
+        .row:not(:first-child) {
+            margin-top: 1rem;
+        }
+
         th {
             border-bottom: 1px black solid;
         }
+
     </style>
 </head>
 <body>
