--- a/django_tuto_root/starships/templates/starships/add_starship.html
+++ b/django_tuto_root/starships/templates/starships/add_starship.html
@@ -5,7 +5,7 @@
 
 <div class="container">
 
-    <h2>New starship</h2>
+    <h1 class="h3">New starship</h1>
 
     {% if submitted %}
     <p class="success">Starship created.</p>
