--- a/django_tuto_root/starships/templates/starships/starship_list.html
+++ b/django_tuto_root/starships/templates/starships/starship_list.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-    <h2>Starship list</h2>
+    <h1 class="h3">Starship list</h1>
 
     <table class="table">
         <tr>
