--- a/starships_root/starships_site/templates/base.html
+++ b/starships_root/starships_site/templates/base.html
@@ -31,11 +31,17 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Starships</a>
         <ul class="navbar-nav me-auto">
-            <li class="nav-item"><a class="nav-link {% if nav_active == 'list' %} active {% endif %}" href="/">List</a>
+            <li class="nav-item">
+                <a class="nav-link {% if nav_active == 'list' %} active {% endif %}" href="/">List</a>
             </li>
-            <li class="nav-item"><a class="nav-link {% if nav_active == 'new' %} active {% endif %}"
-                                    href="/add-starship">New</a></li>
+            <li class="nav-item">
+                <a class="nav-link {% if nav_active == 'new' %} active {% endif %}" href="/add-starship">New</a>
+            </li>
         </ul>
+        <span class="navbar-text">
+            User: {{ user.username }}
+            <a href="{% url 'logout' %}?next=/" class="btn btn-sm btn-outline-secondary ms-2">Log out</a>
+        </span>
     </div>
 </nav>
 
