--- a/starships_root/starships_site/templates/base.html
+++ b/starships_root/starships_site/templates/base.html
@@ -30,6 +30,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Starships</a>
+        {% if user.is_authenticated %}
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
                 <a class="nav-link {% if nav_active == 'list' %} active {% endif %}" href="/">List</a>
@@ -42,6 +43,7 @@
             User: {{ user.username }}
             <a href="{% url 'logout' %}?next=/" class="btn btn-sm btn-outline-secondary ms-2">Log out</a>
         </span>
+        {% endif %}
     </div>
 </nav>
 
