--- a/starships_root/starships_site/templates/registration/success.html
+++ b/starships_root/starships_site/templates/registration/success.html
@@ -5,7 +5,7 @@
 
 <div class="container">
 
-    <h1 class="h3">Welcome !</h1>
+    <h1>Welcome !</h1>
 
     <p>You have successfully registered.</p>
 
