--- a/starships_root/starships_site/templates/registration/login.html
+++ b/starships_root/starships_site/templates/registration/login.html
@@ -13,7 +13,7 @@
                         {% csrf_token %}
                         {% bootstrap_form form %}
                         <input type="hidden" name="next" value="{{ next }}"/>
-                        <div class="text-center">
+                        <div class="form-actions">
                             <a href="{% url 'register' %}" class="card-link">Register</a>
                             <button type="submit" class="btn btn-primary card-link">Login</button>
                         </div>
