--- a/starships_root/starships_site/templates/registration/register.html
+++ b/starships_root/starships_site/templates/registration/register.html
@@ -4,19 +4,21 @@
 {% block content %}
 
 <div class="container">
+    <div class="row mt-5 justify-content-md-center">
+        <div class="col col-lg-4">
 
-    <h1 class="h3">Register</h1>
+            <h1>Register</h1>
 
-    <div class="row">
-        <div class="col-md-12">
-            <form action="" method="post" class="form" novalidate>
-                {% csrf_token %}
-                {% bootstrap_form form %}
-                {% buttons %}
-                <button type="submit" class="btn btn-primary">Login</button>
-                {% endbuttons %}
-                <input type="hidden" name="next" value="{{ next }}"/>
-            </form>
+            <div class="row">
+                <div class="col-md-12">
+                    <form action="" method="post" class="form" novalidate>
+                        {% csrf_token %}
+                        {% bootstrap_form form %}
+                        <button type="submit" class="btn btn-primary">Login</button>
+                        <input type="hidden" name="next" value="{{ next }}"/>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
