--- a/starships_root/starships_site/templates/registration/register.html
+++ b/starships_root/starships_site/templates/registration/register.html
@@ -11,10 +11,10 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <form action="" method="post" class="form" novalidate>
+                    <form action="" method="post" class="form" novalidate data-testid="register-form">
                         {% csrf_token %}
                         {% bootstrap_form form %}
-                        <button type="submit" class="btn btn-primary">Login</button>
+                        <button type="submit" class="btn btn-primary">Register</button>
                         <input type="hidden" name="next" value="{{ next }}"/>
                     </form>
                 </div>
