--- a/app/starships_site/templates/base.html
+++ b/app/starships_site/templates/base.html
@@ -50,7 +50,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Starships</a>
+        <a class="navbar-brand" href="/">Starships</a>
         {% if user.is_authenticated %}
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
