--- a/starships-angular/src/styles.scss
+++ b/starships-angular/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+.form-group {
+    margin-top: 1rem;
+}
+
+.ng-valid[required],
+.ng-valid.required {
+    border-left: 5px solid #42A948;
+}
+
+.ng-dirty.ng-invalid:not(form) {
+    border-left: 5px solid #a94442;
+}
