--- a/starships-angular/src/app/components/sign-in/sign-in.component.html
+++ b/starships-angular/src/app/components/sign-in/sign-in.component.html
@@ -11,7 +11,7 @@
 
               <div class="form-group">
                 <label for="login" class="form-label">Login</label>
-                <input type="text" class="form-control" id="login" required [(ngModel)]="model.login" name="login"
+                <input type="text" class="form-control" id="login" required [(ngModel)]="model.username" name="login"
                   #login="ngModel">
                 <div [hidden]="login.valid || login.pristine" class="alert alert-danger">
                   Login is required
@@ -27,7 +27,7 @@
                 </div>
               </div>
 
-              <div class="form-group">
+              <div class="form-actions">
                 <button type="submit" class="btn btn-success" [disabled]="!signInForm.form.valid">Sign in</button>
               </div>
 
