angular : display username in header, using an observable

--- a/starships-angular/src/app/components/header/header.component.html
+++ b/starships-angular/src/app/components/header/header.component.html
@@ -2,6 +2,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Starships</a>
+
+        {{ currentUser }}
+        
         <!--{% if user.is_authenticated %}
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
