--- a/starships-angular/src/app/components/header/header.component.html
+++ b/starships-angular/src/app/components/header/header.component.html
@@ -1,11 +1,9 @@
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">Starships</a>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Starships</a>
 
-        {{ currentUser }}
-        
-        <!--{% if user.is_authenticated %}
+    {{ username }}
+    <!--{% if user.is_authenticated %}
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
                 <a class="nav-link {% if nav_active == 'list' %} active {% endif %}" href="/">List</a>
@@ -19,5 +17,5 @@
             <a href="{% url 'logout' %}?next=/" class="btn btn-sm btn-outline-secondary ms-2">Log out</a>
         </span>
         {% endif %}-->
-    </div>
+  </div>
 </nav>
